--- a/.gitignore
+++ b/.gitignore
@@ -113,3 +113,6 @@ gradle-app.setting
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
+# gradle
+!/gradle/wrapper/gradle-wrapper.jar
+
